--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -1,5 +1,5 @@
  <% unless regalo.compromiso.nil? %>
-  <div class="regalo regalo-<%= regalo.id %>">
+  <div class="regalo regalo-<%= regalo.id %> hovsw">
     <div class="regalo-body">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pull-left">
@@ -41,7 +41,7 @@
   <!-- /controles-->
   <% else %>
   <% if policy(regalo).edit? %>
-  <div class="regalo regalo-<%= regalo.id %>">
+  <div class="regalo regalo-<%= regalo.id %> hovsw">
     <div class="regalo-body">
         <div class="row">
           <div class="col-lg-2 col-md-3 col-sm-4 col-xs-3 pull-left">
