--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -33,6 +33,7 @@
 <script>
 var ready;
 ready = function() {
+   $("img").lazyload();
    $('#regalos').sortable({
     axis: 'y',
     update: function() {
