Corregir lazyload al mostrar el modal

--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -85,6 +85,8 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
+  });
+  $('.modal').on('shown', function (){
     $("img").lazyload();
   });
 };
