--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -44,6 +44,8 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
+  });
+   $('.modal').on('shown', function (){
     $("img").lazyload();
   });
     $(".hover").hover(function (e) {
