--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -45,7 +45,7 @@ ready = function() {
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
   });
-   $('.modal').on('shown', function (){
+   $('.modal').on('show', function (){
     $("img").lazyload();
   });
     $(".hover").hover(function (e) {
