probando para que funcione el modal

--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -85,7 +85,9 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show', function(){
-      $("img").lazyload();
+      $("img").lazyload({
+        event : "show"
+      });
   });
   
 };
