--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -44,9 +44,7 @@ ready = function() {
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
   });
-  $("img").lazyload({
-    skip_invisible : false
-    });
+  $("img").lazyload();
     $(".hover").hover(function (e) {
         $(this).find('.hovsw').css('cursor', 'move');
         $(this).find('.hovsw').css('background-color', '#ccc');
