--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -85,6 +85,10 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
+    $("img.lazy").each(function() {
+    $(this).attr("src", $(this).attr("original"));
+    $(this).removeAttr("original");
+    });
   });
 };
 $(document).ready(ready);
