--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -33,7 +33,7 @@
 <script>
 var ready;
 ready = function() {
-  $("img").lazyload();
+  $("img.lazy").lazyload();
    $('#regalos').sortable({
     axis: 'y',
     update: function() {
@@ -44,10 +44,6 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
-    $("img.lazy").each(function() {
-    $(this).attr("src", $(this).attr("original"));
-    $(this).removeAttr("original");
-    });
   });
     $(".hover").hover(function (e) {
         $(this).find('.hovsw').css('cursor', 'move');
