--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -10,7 +10,7 @@
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 pull-left">
             <div>
              <p>
-              <small><strong><%= regalo.titulo.to_s.humanize.titleize %></strong></small>
+              <small><strong><%= link_to regalo.titulo.to_s.humanize.titleize , [regalo.lista.fiesta, regalo.lista, regalo]%></strong></small>
             </p>
             </div>
             <div class="controles">
