--- a/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
@@ -3,6 +3,8 @@ Has recibido una invitación de parte de <%= User.find(@convidado.anfitrion_id).
 
 Queremos hacerte participe de la celebración del <%= @convidado.fiesta.nombre.humanize.titleize %>.
 
+Te invitamos a registrarte para que puedas confirmar tu asistencia, ver los invitados, y ver la lista de regalos.
+
 Para ver los detalles de la fiesta, solo debes seguir este link: <%= link_to "regístrate", @url %>.
 
 Te esperamos y que tengas un buen día!
