--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -87,6 +87,7 @@
               <p>tip del anfitrión:</p>
               <i><%= simple_format(regalo.donde_lo_consigues) %>
               </i>
+              <% end %>
               <p><%= link_to 'Más info aquí', regalo.url if regalo.url? %>
               </p>
               <hr>
