--- a/app/views/fiestas/index.html.erb
+++ b/app/views/fiestas/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="fiestas-container">
 <h3>Vista global</h3>
 <div class="row">
   <!-- Fiestas que tu organizas-->
@@ -40,4 +41,5 @@
     <% end %>
   </div>
 
+</div>
 </div>
