--- a/app/views/fiestas/show.html.erb
+++ b/app/views/fiestas/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="fiestas-container">
 <div class="fiesta">
   <div class="row">
     <div class="col-sm-12">
@@ -42,4 +43,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
