--- a/app/views/listas/edit.html.erb
+++ b/app/views/listas/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container" id="listas-container">
 <h3>Editar lista</h3>
 <%= render partial: "form", locals: {lista: @lista} %>
+</div>
 
