--- a/app/views/listas/index.html.erb
+++ b/app/views/listas/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="listas-container">
 <h3>Listas</h3>
 <% if current_user.present? %>
 <div class="alert alert-info">
@@ -27,3 +28,4 @@
   </div>
 <% end %>
 <% end %>
+</div>
