--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="listas-container">
 <ol class="breadcrumb">
     <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / <%= @lista.nombre %></li>
   </ol>
@@ -76,7 +77,7 @@
   </div>
   <div>
 </div>
-
+</div>
 <script>
 var ready;
 ready = function() {
