--- a/app/views/regalos/edit.html.erb
+++ b/app/views/regalos/edit.html.erb
@@ -1,2 +1,4 @@
+<div class="container" id="regalos-container">
 <h1>Editar regalo</h1>
 <%= render partial: "form", locals: {fiesta: @fiesta, lista: @lista, regalo: @regalo} %>
+</div>
