--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="confirmations">
 <h2>Reenviar instrucciones de confirmación</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
@@ -10,3 +11,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
