--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="passwords">
 <h2>Olvidaste la contraseña?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -10,3 +11,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
