--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="registrations">
 <h2>Edita tu cuenta</h2>
 
 <div class="row">
@@ -39,4 +40,5 @@
         <p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Estas segura?" }, method: :delete, class: 'btn btn-danger btn-sm' %></p>
     </div>
   </div>
+</div>
 </div>
