--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="signup">
 <h2>Regístrate</h2>
 
 <div class="row">
@@ -33,4 +34,5 @@
       </div>
     <% end %>
   </div>
+</div>
 </div>
