--- a/app/views/fiestas/edit.html.erb
+++ b/app/views/fiestas/edit.html.erb
@@ -1,7 +1,9 @@
+<div class="container" id="fiestas-container">
 <h1>Editar fiesta </h1>
 <div class="row">
   <div class="col-md-6">
     <span class="help-block">Personaliza los detalles de la fiesta</span>
     <%= render partial: "form", locals: {fiesta: @fiesta} %>
   </div>
+</div>
 </div>
