--- a/app/views/fiestas/new.html.erb
+++ b/app/views/fiestas/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container" id="fiestas-container">
 <h3>Nueva fiesta</h3>
 <span class="help-block">
 Estos campos definen lo que tus invitados verán al momento de invitarlos. Todos podrán ser editados posteriormente.
 </span>
 <%= render partial: "form", locals: {fiesta: @fiesta} %>
+</div>
