--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,23 +11,46 @@
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application"%>
   <%= csrf_meta_tags %>
+    <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="assets/js/html5shiv.js"></script>
+      <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-  <div class="container">
-    <ul class="nav nav-tabs">
-      <li><%= link_to root_path do %><i class="fa fa-gift"></i> La Lista<% end %></li>
-      <div class="pull-left user-info"><small>controla tus listas de regalos</small></div>
-
-      <div class="pull-right user-info">
-       <% if current_user %>
-         Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
-       <% else %>
-         <%= link_to "Ya eres miembro? Ingresa", ingresar_path %> 
-       <% end %>
+  <div id="navbar-main">
+      <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="fa fa-shield" style="font-size:18px; color:#3498db;"></span></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><%= link_to "inicio", root_path %></li>
+            <% if current_user %>
+            <li> <a href="#about" class="smoothScroll"> Invitaciones</a></li>
+            <li> <a href="#services" class="smoothScroll"> Fiestas</a></li>
+            <li> <a href="#team" class="smoothScroll"> Regalos</a></li>
+            <% end %>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <div class="user-info">
+            <% if current_user %>
+              Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
+            <% else %>
+              <%= link_to "Ya eres miembro? Ingresa", ingresar_path %> 
+            <% end %>
+            </div>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </ul>
-    <%= render 'layouts/messages' %>
-    <%= yield %>
+    </div>
   </div>
+  <%= render 'layouts/messages' %>
+  <%= yield %>
+ 
 </body>
 </html>
