--- a/app/views/listas/new.html.erb
+++ b/app/views/listas/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container" id="listas-container">
   <ol class="breadcrumb">
     <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / nueva lista de regalos</li>
   </ol>
@@ -29,4 +29,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
