--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container" id="regalos-container">
 <ol class="breadcrumb">
     <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / <%= link_to @lista.nombre, [@fiesta, @lista] %> / regalos </li>
   </ol>
