--- a/app/views/regalos/new.html.erb
+++ b/app/views/regalos/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container" id="regalos-container">
 <h3>Nuevo Regalo</h3>
 <p>Un regalo a la vez para... <%= @fiesta.nombre %></p>
 <%= render partial: "form", locals: {fiesta: @fiesta, lista: @lista, regalo: @regalo } %>
+</div>
