añadir links a la barra de navegacion

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -419,15 +419,18 @@ a:after {
    Other Settings
    =============== */
 .user-info {
-  margin-top: 9px;
+  margin-top: 12px;
    color: #999999;
 }
 
 .nav {
   margin-top: 5px;
+  i {
+    font-size: 20px;
+  }
 }
 
-.lista-fiestas {
+.lista-fiestas, .lista-compromisos {
   border-bottom: 1px dotted rgba(0, 0, 0, 0.5);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 1px dotted #eee;
